# AlgorithmVisualizer

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp
docs/: Doxyfile  midpoint_submission_checklist.md  timeline.md
include/: imgui-SFML.h  imgui.h
include/Algorithm/: Algorithm.h  AlgorithmFactory.h  BFSStrategy.h  BreadthFirstSearch.h  BubbleSortAlgorithm.h  DepthFirstSearch.h  DijkstraAlgorithm.h  InsertionSortAlgorithm.h  KruskalAlgorithm.h  MergeSortAlgorithm.h  QuickSortAlgorithm.h  SelectionSortAlgorithm.h  SortingAlgorithm.h  SortingAlgorithmFactory.h  SortingHelpers.h
include/Controller/: AppController.h  InputHandler.h  SimulationManager.h  WorkspaceManager.h
include/Model/: Algorithm.h  Edge.h  Graph.h  Node.h  SimulationState.h
include/Playback/: PlaybackSession.h  SimulationState.h
include/View/: GraphRenderer.h  SFMLRenderer.h  Sidebar.h  UIManager.h  UIMetricsPanel.h  UIPlaybackBar.h  UITheme.h
scripts/: push-main.sh  sync-main.sh
src/: gui_main.cpp  main.cpp
src/Algorithm/: Algorithm.cpp  AlgorithmFactory.cpp  BreadthFirstSearch.cpp  BubbleSortAlgorithm.cpp  DepthFirstSearch.cpp  DijkstraAlgorithm.cpp  InsertionSortAlgorithm.cpp  KruskalAlgorithm.cpp  MergeSortAlgorithm.cpp  QuickSortAlgorithm.cpp  SelectionSortAlgorithm.cpp  SortingAlgorithmFactory.cpp  SortingHelpers.cpp
src/Controller/: AppController.cpp  InputHandler.cpp  SimulationManager.cpp  WorkspaceManager.cpp
src/Model/: BFSStrategy.cpp  Edge.cpp  Graph.cpp  Node.cpp  SimulationState.cpp
src/Playback/: PlaybackSession.cpp
src/View/: GraphRenderer.cpp  SFMLRenderer.cpp  Sidebar.cpp  UIManager.cpp  UIMetricsPanel.cpp  UIPlaybackBar.cpp  UITheme.cpp
tests/: deleteThisLater.cpp  test_bfs.cpp  test_main.cpp
